# Endianness

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
