[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3", "wheel"]

[project]
name = "Endianness"
description = "A library to remap integers of a certain endianness into another endianness"
readme = "ReadMe.md"
keywords = ["endian", "endianness", "integer"]
license = {text = "Unlicense"}
authors = [{name = "KOLANICH"}]
requires-python = ">=3.4"
dependencies = [
  "rangeslicetools@ git+https://gitlab.com/KOLANICH/rangeslicetools.py.git",
]
dynamic = ["version"]
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	#"License :: Public Domain :: Unlicense",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
[project.optional-dependencies]
cli = ["plumbum@ git+https://github.com/tomerfiliba/plumbum.git",]

[project.urls]
Homepage = "https://github.com/KOLANICH/Endianness.py"


[tool.setuptools]
zip-safe = true
packages = ["Endianness"]

[tool.setuptools_scm]
